# chouette-serveur

./: .gitignore  README.md  config.yml.example  main.py  pyproject.toml
copy_admin_chouettos_to_odoo/: __init__.py  db_converter.py
customers_populate_from_ldap/: __init__.py
download_data_from_prod/: __init__.py  config.yml.example  containers.py  ftp.py
helpers/: config.py  containers.py  odoo_api.py
update_meal_voucher_products/: __init__.py  categories.py  odoo_api.py
update_scales/: __init__.py
