[tool.poetry]
name = "chouette-serveur"
version = "0.1.0"
description = ""
authors = ["Vincent Bisserie <vbisserie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
docker-compose = "^1.28.6"
dotmap = "^1.3.23"
"ruamel.yaml" = "^0.17.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
