[tool.poetry]
name = "chouette-serveur"
version = "0.1.0"
description = ""
authors = ["Vincent Bisserie <vbisserie@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
docker-compose = "*"
dotmap = "*"
"ruamel.yaml" = "*"
sentry-sdk = "*"
pyyaml = "5.3.1"
python-ldap = "^3.4.4"

[tool.poetry.dev-dependencies]
pre-commit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
